# aicrm

backend/: config.py  database.py  main.py  pyproject.toml
backend/app/: config.py  database.py  seed.py
backend/app/agent/: graph.py  tools.py
backend/app/api/v1/: chat.py  hcps.py  interactions.py
backend/app/models/: __init__.py  hcp.py  interaction.py
backend/migrations/: env.py
backend/migrations/versions/: cc39cc460c3b_add_hcp_and_interaction_tables.py
backend/schemas/: __init__.py  hcp.py  interaction.py
frontend/: package.json  pnpm-lock.yaml
